# chess-arena

app/: board.py  move.py
engine/: .gitignore  CMakeLists.txt
engine/include/engine/: public_headers.h
engine/src/: library.cpp  main.cpp
engine/src/chess/: board.cpp  board.h  piece.cpp  piece.h
